# color-app

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
templates/: content.html  hello.html
