[tool.poetry]
name = "color-app"
version = "0.1.0"
description = ""
authors = ["axsapronov <a@sapronov.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
prometheus-flask-exporter = "^0.23.0"
uwsgi = "^2.0.23"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.36.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1.0"
flake8-isort = ">=6.0.0"
coverage = ">=7.2.7"
black = ">=23.7.0"
pre-commit = ">=3.3.3"
autoflake = ">=2.2.0"
bump-my-version = "^0.12.0"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
