[tool.poetry]
name = "phrase-app"
version = "1.0.12"
description = ""
authors = ["axsapronov <a@sapronov.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
prometheus-flask-exporter = "^0.23.0"
uwsgi = "^2.0.24"
python-dotenv = "^1.0.1"
sentry-sdk = "^1.44.1"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.0.0"
flake8-isort = ">=6.1.1"
coverage = ">=7.4.4"
black = ">=24.3.0"
pre-commit = ">=3.7.0"
autoflake = ">=2.3.1"
bump-my-version = "^0.12.0"
poetry-plugin-up = "^0.7.1"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "1.0.12"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]
message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "app.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
